fixed spacing when serving size field has no arrows

--- a/nutritionLabel.css
+++ b/nutritionLabel.css
@@ -163,6 +163,9 @@
 	margin-left: 15px;
 	margin-bottom: 0;
 }
+.nutritionLabel input.unitQuantityBox.arrowsAreHidden {
+	margin-left: 0;
+}
 .nutritionLabel .rel {
 	position: relative;
 }
